syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package network.packets;

message StartWatching {
    string Id = 1;
}