syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package network.packets;

message StopWatching {
    string Id = 1;
}